[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/dialogue_system/next.png" type="Texture" id=1]
[ext_resource path="res://scenes/DialogueLoader.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/dialogue_Ui/paper_hor.png" type="Texture" id=4]
[ext_resource path="res://scenes/dialogue_controller.gd" type="Script" id=5]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 5 )
dialogue_file_path = "res://resources/dialogue/story.json"

[node name="DialogueSystem" type="Control" parent="."]
anchor_left = 0.499001
anchor_top = 1.0
anchor_right = 0.499001
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -600.653
margin_right = 512.0
margin_bottom = -0.652954
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="Control" parent="DialogueSystem"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0001
margin_right = 20.0
margin_bottom = 20.0001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box" type="TextureRect" parent="DialogueSystem/DialogBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -305.5
margin_top = -176.5
margin_right = 305.5
margin_bottom = 176.5
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogue" type="Label" parent="DialogueSystem/DialogBox/box"]
anchor_left = -0.763288
anchor_top = -1.09389
anchor_right = -0.102274
anchor_bottom = -0.46889
margin_left = 600.0
margin_top = 446.4
margin_right = 640.0
margin_bottom = 460.4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dialogue"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="speaker" type="Label" parent="DialogueSystem/DialogBox/box"]
anchor_left = -0.944145
anchor_top = -1.00031
anchor_right = -0.874235
anchor_bottom = -0.937808
margin_left = 600.0
margin_top = 446.4
margin_right = 640.0
margin_bottom = 460.4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Speaker"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="DialogueSystem/DialogBox/box"]
margin_left = 479.425
margin_top = 282.982
margin_right = 521.425
margin_bottom = 318.982
icon = ExtResource( 1 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="DialogueSystem"]

[node name="DialogueLoader" parent="DialogueSystem" instance=ExtResource( 3 )]
[connection signal="button_down" from="DialogueSystem/DialogBox/box/Button" to="." method="_on_Button_button_down"]
